--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ var preloader_plus = {"animation_delay":"500","animation_duration":"1000"};
                     </li>
                     														<li class="elementor-repeater-item-1f61a20">
 					    <a
-						href="https://x.com/" target="_blank" rel="nofollow" aria-label="Twitter X" class="" >
+						href="https://twitter.com/Long_Cat_Solana" target="_blank" rel="nofollow" aria-label="Twitter X" class="" >
 														
 							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Layer_1" x="0px" y="0px" viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve"><style type="text/css">	.st0{fill:#FCFCFC;}</style><path class="st0" d="M450.6,434.3c-51.9-69.5-103.8-139.1-156-208.3c-4.9-6.6-4.5-9.9,1-15.6c45.2-48.3,90.1-97.1,135-145.6 c2.4-2.7,6-4.5,6.6-9.6c-5.7,0-11.3,0.7-16.6-0.1c-12.3-2-20.7,3.1-28.9,12.1C354.8,107.8,317,147.8,280,188.4 c-5.9,6.6-8.4,6.4-13.7-0.7c-30.9-41.9-62.1-83.4-93.3-125c-2.5-3.4-4-7.8-9.9-7.8C123.8,55.2,84.7,55,45.4,55 c0.4,5.4,3.9,8.1,6.3,11.2c48.7,65.4,97.5,130.7,146.6,195.8c4.9,6.4,4.9,9.8-0.7,15.6c-48.9,52.1-97.3,104.6-145.8,157.1 c-2.7,2.8-5,5.9-8.8,10.3c8,0,14-0.6,19.7,0.1c11.5,1.5,19.1-2.9,27-11.5c40.6-44.8,82.1-89.1,123.3-133.5c2.4-2.5,4.2-6,8.4-7 c2.5,3.4,5,6.7,7.5,9.9c33.4,44.5,66.9,89.1,100,133.9c4.5,6,9.1,8.4,16.6,8.2c34.1-0.4,68-0.1,102.1-0.3c3.1,0,6.6,1.5,9.5-1.8 C454.8,440.3,452.8,437.3,450.6,434.3z M351,418.3c-3.2,0-4.5-2.5-6-4.5C262.9,304,180.8,194.1,97,82.1c19.1,0,35.7,0.1,52.5-0.1 c4,0,6,2.2,8.1,4.9c81.6,109.3,163.2,218.5,244.9,327.9c0.4,0.6,0.3,1.4,0.7,3.5H351z"></path></svg>									
                                                                                                             </a>
@@ -1422,7 +1422,7 @@ var preloader_plus = {"animation_delay":"500","animation_duration":"1000"};
                     </li>
                     														<li class="elementor-repeater-item-1f61a20">
 					    <a
-						href="https://x.com/" target="_blank" rel="nofollow" aria-label="Twitter X" class="" >
+						href="https://twitter.com/Long_Cat_Solana" target="_blank" rel="nofollow" aria-label="Twitter X" class="" >
 														
 							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Layer_1" x="0px" y="0px" viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve"><style type="text/css">	.st0{fill:#FCFCFC;}</style><path class="st0" d="M450.6,434.3c-51.9-69.5-103.8-139.1-156-208.3c-4.9-6.6-4.5-9.9,1-15.6c45.2-48.3,90.1-97.1,135-145.6 c2.4-2.7,6-4.5,6.6-9.6c-5.7,0-11.3,0.7-16.6-0.1c-12.3-2-20.7,3.1-28.9,12.1C354.8,107.8,317,147.8,280,188.4 c-5.9,6.6-8.4,6.4-13.7-0.7c-30.9-41.9-62.1-83.4-93.3-125c-2.5-3.4-4-7.8-9.9-7.8C123.8,55.2,84.7,55,45.4,55 c0.4,5.4,3.9,8.1,6.3,11.2c48.7,65.4,97.5,130.7,146.6,195.8c4.9,6.4,4.9,9.8-0.7,15.6c-48.9,52.1-97.3,104.6-145.8,157.1 c-2.7,2.8-5,5.9-8.8,10.3c8,0,14-0.6,19.7,0.1c11.5,1.5,19.1-2.9,27-11.5c40.6-44.8,82.1-89.1,123.3-133.5c2.4-2.5,4.2-6,8.4-7 c2.5,3.4,5,6.7,7.5,9.9c33.4,44.5,66.9,89.1,100,133.9c4.5,6,9.1,8.4,16.6,8.2c34.1-0.4,68-0.1,102.1-0.3c3.1,0,6.6,1.5,9.5-1.8 C454.8,440.3,452.8,437.3,450.6,434.3z M351,418.3c-3.2,0-4.5-2.5-6-4.5C262.9,304,180.8,194.1,97,82.1c19.1,0,35.7,0.1,52.5-0.1 c4,0,6,2.2,8.1,4.9c81.6,109.3,163.2,218.5,244.9,327.9c0.4,0.6,0.3,1.4,0.7,3.5H351z"></path></svg>									
                                                                                                             </a>
